src/app/components/hero/hero.component.scss
.hero {
      background-color: transparent;
      height: 100%;
      flex: 1;
      width: 100%;
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
      text-align: center;
      padding: 2rem;
      font-family: 'Inter', sans-serif;
      animation: fadeInUp 0.8s ease-out both;
  
    h1 {
      font-size: 2.25rem;
      font-weight: 700;
      margin-bottom: 1rem;
      animation: fadeInUp 0.6s ease-out 0.2s both;
  
      .highlight {
        color: #4f46e5;
      }

      @media (max-width: 768px) {
        font-size: 1.75rem;
      }
    }
  
    .subtitle {
      font-size: 1.25rem;
      font-weight: 400;
      color: #555;
      margin-bottom: 2rem;
      transition: all 0.3s ease;

      .highlight-role {
        color: #4f46e5;
        font-weight: 600;
      }
      @media (max-width: 768px) {
        font-size: 1rem;
      }
    }
  
    .cta-btn {
      padding: 0.75rem 1.5rem;
      background-color: #4f46e5;
      color: white;
      border: none;
      border-radius: 8px;
      font-weight: 600;
      text-decoration: none;
      font-size: 1rem;
      animation: fadeInUp 0.6s ease-out 0.6s both;

      @media (max-width: 768px) {
        padding: 0.5rem 1rem;
        font-size: 0.9rem;
      }
    }
  
    .cta-btn:hover {
      background-color: #4338ca;
    }
  }
  @keyframes fadeInUp {
    from {
      opacity: 0;
      transform: translateY(20px);
    }
  
    to {
      opacity: 1;
      transform: translateY(0);
    }
  }

  

